--- a/main.html
+++ b/main.html
@@ -8,6 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div id="fav_animal">
+		<img scr="https://plus.unsplash.com/premium_photo-1661952469735-001920bf0e58?q=80&w=1770&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="
+			A Elephant small baby walking in the water">
+	</div>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
